Day-7/1. Without SSL/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
  selector:
    app: nginx-app
