Day-7/1. Without SSL/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: app=techworldwithmurali,Team=DevOps
spec:
  ingressClassName: alb
  rules:
    - host: nginx-app.techworldwithmurali.in
      http:
        paths:
          - path: /index.html
            pathType: Exact
            backend:
              service:
                name: nginx-app
                port:
                  number: 80
